# pretix-auth-github

./: MANIFEST.in  Makefile  README.md  pyproject.toml
pretix_auth_github/: apps.py  auth.py  urls.py  views.py
