[project]
name = "pretix-auth-github"
dynamic = ["version"]
description = "Supports pretix backend auth using github, based on pretix-auth-okta"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["pretix"]

dependencies = [

]

[project.entry-points."pretix.plugin"]
pretix_auth_okta = "pretix_auth_github:PretixPluginMeta"

[project.entry-points."distutils.commands"]
build = "pretix_plugin_build.build:CustomBuild"

[build-system]
requires = [
    "setuptools",
    "pretix-plugin-build",
]

[project.urls]
homepage = "https://github.com/agrillenberger/pretix-auth-github"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "pretix_auth_github.__version__"}

[tool.setuptools.packages.find]
include = ["pretix*"]
namespaces = false
